--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -170,10 +170,18 @@
 
 // Change button font size for smaller screens
 
-@media only screen and (min-width: 300px) and (max-width: 695px) {
+@media only screen and (min-width: 400px) and (max-width: 695px) {
   .sub-banner-section {
     .btn {
       font-size: 1.3em;
+    }
+  }
+}
+
+@media only screen and (min-width: 300px) and (max-width: 399px) {
+  .sub-banner-section {
+    .btn {
+      font-size: 1em;
     }
   }
 }
